feat: update spring boot version to 4.0.3 from spring boot 3.
- Update pom.xml dependencies for all services.
- Update configurations, add application properties for notification service